tests/parser/bad/type_t-forall-with.scilla
scilla_version 0

library TestLib

(* this is an invalid type identifier *)
let f : forall invalidtypeid
